Pod-order/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-order
  namespace: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-order
  template:
    metadata:
      labels:
        app: pod-order
    spec:
      containers:
        - name: order-db-container
          image: postgres:15
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5437
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: order-storage

        - name: order-api-container
          image: goodfoodorder
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi" 
      volumes:
        - name: order-storage
          persistentVolumeClaim:
            claimName: order-pvc
