Pod-order/order-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: order-ingress
  namespace: order
spec:
  entryPoints:
    - web
  routes:
    # Route pour l'API (/order/api/...)
    - match: Host(`localhost`) && PathPrefix(`/order/api`)
      kind: Rule
      priority: 12
      services:
        - name: order-service
          namespace: order
          port: 3005
      middlewares:
        - name: strip-order-api-prefix
          namespace: order

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-order-api-prefix
  namespace: order
spec:
  stripPrefix:
    prefixes:
      - /order/api
